<resources>
    <string name="app_name">Examen Práctica_DI</string>
    <string name="producto">Producto</string>
    <string name="subtotal">Subtotal</string>
    <string name="prod1">Jabón de manos x 1</string>
    <string name="prod2">Shampoo de manos x 1</string>
    <string name="prod3">Pastas Duria x 2</string>
    <string name="prod4">Detergente Limpiadin x 1</string>
    <string name="precio1">$2</string>
    <string name="precio2">$10</string>
    <string name="precio3">$18</string>
    <string name="precio4">$13,4</string>
    <string name="costos">Costo envío</string>
    <string name="cupon">Cupón</string>
    <string name="total">Total</string>
    <string name="precio5">$43,4</string>
    <string name="precio6">-$5</string>
    <string name="precio7">$48,4</string>
    <string name="titulo">Crazy Layouts</string>
</resources>